--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 # ---> C
 # Prerequisites
 *.d
+.depend
 
 # Object files
 *.o
 *.ko
 *.obj
 *.elf
+*.hex
+*.bin
+*.elf
+*.x
 
 # Linker output
 *.ilk
@@ -58,7 +63,6 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
